fix bug: header is now not showing on top of fullscreen images

--- a/projects/client/src/app/components/header/header.component.scss
+++ b/projects/client/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   background-color: var(--clr-primary);
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 2;
 
   &__logo {
     width: 20%;
